@@ -9,6 +9,8 @@ What's New in Python 2.7.5?
 Core and Builtins
 -----------------
 
+- Issue #17610: Don't rely on non-standard behavior of the C qsort() function.
+
 Library
 -------
 
